--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html{
   text-align: center;
   box-shadow: 0 4px 12px 0 rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%);
   padding: 16px 5px 15px 5px;
-  margin: 9px 10px 25px 10px;
+  margin: 9px 10px 30px 10px;
   border-radius: 10px;
 }
 .app .title span {
@@ -17,6 +17,8 @@ html{
   min-height: 550px;
   display: flex;
   justify-content: space-around;
+  flex-direction: row ;
+  flex-wrap: wrap;
 }
 
 .app .contents .mode {
@@ -27,12 +29,14 @@ html{
   background: #f5f5f5;
   overflow: auto;
   width: 46%;
+  min-width: 320px;
 }
 
 .app .contents .tree {
   background: #f5f5f5;
   overflow: auto;
   width: 46%;
+  min-width: 320px;
 }
 
 .app .contents .menu{
